# qt_qml_extensions

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Gemfile  README.md  cmake-android.sh  fetchcontent-lockfile.json  qml.qrc  testapp_build_config.h.in  testapp_build_config.hpp.in
.cursor/rules/: repo-instructions.mdc
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: android-release.yml  android-screenshots.yml  build.yml  pre-commit-check.yml
TestApp/: CMakeLists.txt  readme.txt
TestApp/gui/: AppWindow.qml  TestAppGUI.qmlproject  qml.qrc
TestApp/gui/dummydata/: cfgModel.qml
TestApp/sdks/: dependencies.txt
TestApp/src/: _beautify.bat
TestApp/src/_gui/src_Qt/: cfg_model.h  main.cpp
_shared/: CustomScaler.qml
android/: AndroidManifest.xml
android-screenshot-tests/: README.md  build.gradle  settings.gradle
android-screenshot-tests/screenshot-host/: build.gradle
android-screenshot-tests/screenshot-host/src/androidTest/java/org/cismypa/qtqmlextensionstestapp/screenshots/: QtQmlExtensionsScreenshotsTest.java
android-screenshot-tests/screenshot-host/src/debug/: AndroidManifest.xml
android-screenshot-tests/screenshot-host/src/main/: AndroidManifest.xml
android-screenshot-tests/screenshot-host/src/main/res/values/: styles.xml
artifacts/android-screenshots/: screenshots.html
cmake/: dependencies.cmake
cmake_util/: dependencies.cmake  util.cmake
colors_palette/: ExtColors.qml  ExtColorsTest.qml  ExtColorsTest.qmlproject  README.md  readme.txt
colors_palette/ExtColorsTestApp/: .gitignore  CMakeLists.txt  ExtColorsTestApp_build_config.h.in  buildnr.cmake  defaults.cmake  qt.cmake  qtdeploy_autodepends_bin_win.bat  qtdeploy_autodepends_bindbg_win.bat  qtdeploy_autodepends_win.bat
colors_palette/ExtColorsTestApp/gui/: qml.qrc
colors_palette/ExtColorsTestApp/sdks/: CMakeLists.txt  dependencies.txt  googletest.cmake
colors_palette/ExtColorsTestApp/src/: consts.h  consts.test.cpp
colors_palette/ExtColorsTestApp/src/_gui/src_Qt/: main.cpp
colors_palette/impl/: ColorsActive.qml  ColorsDisabled.qml  ColorsInactive.qml  TestLabel.qml  TestRectangle.qml  qmldir
colors_palette/schemes/: Bright.qml  CopyPasteTemplate.qml  Dark.qml  Def.qml  Inverse.qml  PurpleGreen.qml  Todo.qml
controls/: ButtonSq_def.qml  Button_def.qml  CharColorSwitch.qml  ControlsTest.qml  ControlsTest.qmlproject  ExtControlsCfg.qml  Label_def.qml  SpinBoxLabelRow_def.qml  TestHelperBox.qml  TestHelperCornerMarkers.qml  TextFieldLabelRow_def.qml
controls/2/: ButtonSq_def.qml  Button_def.qml  Label_def.qml  SpinBoxLabelRow_def.qml  SpinBox_def.qml  TabView_def.qml  TextFieldLabelRow_def.qml  TextField_def.qml
controls/QC1_def/: ButtonSq_.qml  ButtonTool_.qml  Button_.qml  CharColorSwitch_.qml  CheckBox_.qml  ComboBox_.qml  GroupBox_.qml  Label_.qml  Pane_.qml  RadioButton_.qml  SpinBoxLabelRow_.qml  SpinBox_.qml  TabBar_readme.txt  TabView_.qml  TextFieldLabelRow_.qml  TextField_.qml  qmldir#
controls/QC2_def/: ButtonSq_.qml  ButtonTool_.qml  Button_.qml  CharColorSwitch_.qml  CheckBox_.qml  ComboBox_.qml  GroupBox_.qml  Label_.qml  Pane_.qml  RadioButton_.qml  Spacer_Col_.qml  Spacer_Row_.qml  SpinBoxLabelRow_.qml  SpinBox_.qml  TabBar_.qml  TabButton_.qml  TabView_.qml  TextArea_.qml  TextFieldLabelRow_.qml  TextField_.qml  Text_.qml  ToolTip_.qml
controls/_shared/: CharColorSwitch_.qml
controls/_shared/impl/: CfgControls.qml  obtainButtonProps.js  obtainControlProps.js  obtainListDelegateProps.js
controls/minimal/: ApplicationWindow_.qml  ButtonSq_.qml  ButtonTool_.qml  ButtonWithIcon_.qml  Button_.qml  CharColorSwitch_.qml  CheckBox_.qml  ComboBox_.qml  Drawer_.qml  Frame_.qml  GroupBoxQC1Styled_.qml  GroupBox_.qml  Label_.qml  ListBox_.qml  Pane_.qml  Popup_.qml  RadioButton_.qml  ScrollBar_.qml  ShortcutLabel_.qml  Spacer_Col_.qml  Spacer_Row_.qml  SpinBoxLabelRow_.qml  SpinBox_.qml  TabBar_.qml  TabButton_.qml  TabView_readme.txt  TextAreaScrollable_.qml  TextArea_.qml  TextFieldBrowseBtnRow_.qml  TextFieldLabelRow_.qml  TextFieldWithLabel_.qml  TextField_.qml  TextInput_.qml  ToolTip_.qml
controls/minimal/impl/: ButtonBackground.qml  FrameBackground.qml  GroupBoxQC1Style.qml  PaneBackground.qml  TextFieldBackground.qml
core/: os.js
doc/: readme.txt
fastlane/: Appfile  Fastfile  README.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fonts/: ExtFont.qml  ExtFontMetrics.qml  ExtFontTest.qml  ExtFontTest.qmlproject
fonts/impl/: TestRectangle.qml
fonts/schemes/: CopyPasteTemplate.qml  Def.qml  DefQC1.qml  DefQC2.qml  Mistral.qml
layout/: ExtLayoutTest.qml  ExtLayoutTest.qmlproject  ExtScale.qml  ExtSpacing.qml  qmldir  spacings.qml
layout/impl/: TestHelperObj.qml  TestRectangle.qml
os/: ExtOS.qml
testapp/: .gitignore  CMakeLists.txt  cmake-android.sh  testapp_build_config.h.in
testapp/cmake_util/: util.cmake
testapp/doc/stores/googleplaystore/: upload_keystore.jks
testapp/gui/: AppWindow.qml  Draft.qml
testapp/gui/dummydata/: cfgModel.qml
testapp/src/_gui/src_Qt/: cfg_model.h  cfg_model.hpp  main.cpp
